<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Colorpigpink"
    tools:context="com.example.mike.pinklist.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:letterSpacing="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#5b4499"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#281f89"
                android:textSize="15sp"
                android:layout_marginBottom="4dp" />

            <EditText
                android:padding="7dp"
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="15dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Password"
                android:textColor="#281f89"
                android:textSize="15sp"
                android:layout_marginBottom="4dp" />
            <EditText
                android:layout_marginBottom="15dp"
                android:padding="7dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_marginBottom="4dp"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Confirm Password"
                android:textColor="#281f89"
                android:textSize="15sp" />
            <EditText
                android:padding="7dp"
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="35dp" />
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:onClick="onClick"
                android:text="@string/Reg"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:layout_marginBottom="25dp" />
            <TextView
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:id="@+id/textView8"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Registering"
                android:textColor="@color/purple" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="@color/purple"
                android:textSize="15sp"
                android:onClick="toLogin"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/activity_horizontal_margin" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

