<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Colorpigpink"
    tools:context="com.example.mike.pinklist.ui.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                android:letterSpacing="0.2"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/midnightBlue"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_View5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Email"
                android:textColor="@color/midnightBlue"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="4dp"/>
            <EditText
                android:layout_gravity="center"
                android:id="@+id/email"
                android:padding="7dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            >
        <TextView
                android:id="@+id/text_view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/midnightBlue"
                android:textSize="@dimen/text_size"
                android:layout_alignParentLeft="true" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickForgot"
                android:text="@string/forgot"
                android:layout_alignParentRight="true"
                android:textColor="@color/silver"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
            <EditText
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:padding="7dp"
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/edittextstyle"
                    android:ems="10"
                    android:layout_marginBottom="15dp"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark" />
            <Button
                android:layout_gravity="center"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="70dp"
                android:textSize="@dimen/button_text_size" />
            <TextView
                android:layout_gravity="center"
                android:id="@+id/textView6"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="toRegister"
                android:layout_marginBottom="15dp"
                android:text="@string/new_user_register_here"
                android:textColor="@color/midnightBlue"/>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
